--- a/game.html
+++ b/game.html
@@ -4,11 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="game.css">
+    <title>Game</title>
 
 </head>
 <body>
-    
+  
+  <h6>it doesnt really work</h6>
+  <h1>Calculator</h1>
+  <input id="number1">
+  <button id="mySubmit1">Submit</button>
+  <h3 id="h3"></h3><br><br><br>
+  <h1 id="theorem">Pythagorean Theorem Calculator</h1>
+  <label>Leg 1:</label><input id="leg1"><br>
+  <label>Leg 2:</label><input id="leg2">
+  <button id="hySubmit">Submit</button>
+  <h3 id="hyh3"></h3>
+
+
+
+
+  <script src="game.js">   
+    </script> 
 </body>
 </html>
